# DWEEB

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  tsconfig.seo.json  tsconfig.vitest.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  deploy.yml  docker.yml  plugin-dispatcher.yml  plugin-giveaway.yml  plugin-modal-form.yml  plugin-picker.yml  plugin-ping-pong.yml  plugin-poll.yml  plugin-quick-replies.yml  plugin-self-role.yml  plugin-tickets.yml  plugins-ci.yml  server.yml  uptime-watchdog.yml  web.yml
docs/: activity.md  plugins.md  seo-growth.md
functions/api/: llm.ts  shorten.ts
plugins/dispatcher/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
plugins/dispatcher/src/: commands.rs  main.rs  store.rs
plugins/giveaway/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md
plugins/giveaway/src/: config.rs  discord.rs  main.rs  rest.rs  routes.rs  store.rs  validate.rs
plugins/giveaway/static/: config.html
plugins/modal-form/: .env.example  Cargo.toml  Dockerfile  README.md
plugins/modal-form/src/: config.rs  discord.rs  main.rs  routes.rs  store.rs  validate.rs
plugins/modal-form/static/: config.html
plugins/picker/: .env.example  Cargo.toml  Dockerfile  README.md
plugins/picker/src/: config.rs  discord.rs  main.rs  routes.rs  store.rs  validate.rs
plugins/picker/static/: config.html
plugins/ping-pong/: .env.example  Cargo.toml  Dockerfile  README.md
plugins/ping-pong/src/: main.rs
plugins/ping-pong/static/: config.html
plugins/poll/: .env.example  Cargo.toml  Dockerfile  README.md
plugins/poll/src/: config.rs  discord.rs  main.rs  rest.rs  routes.rs  store.rs  validate.rs
plugins/poll/static/: config.html
plugins/quick-replies/: .env.example  Cargo.toml  Dockerfile  README.md
plugins/quick-replies/src/: config.rs  discord.rs  main.rs  rest.rs  routes.rs  store.rs  validate.rs
plugins/quick-replies/static/: config.html
plugins/self-role/: .env.example  Cargo.toml  Dockerfile  README.md
plugins/self-role/src/: config.rs  discord.rs  main.rs  reaper.rs  rest.rs  routes.rs  store.rs  validate.rs
plugins/self-role/static/: config.html
plugins/tickets/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md
plugins/tickets/src/: config.rs  discord.rs  main.rs  rest.rs  routes.rs  store.rs  validate.rs
plugins/tickets/static/: config.html
prompts/: build-discord-message.md
public/: _headers  _redirects  gtag-init.js  llms.txt  manifest.webmanifest  privacy.html  robots.txt  sitemap.xml  terms.html
scripts/: create-webhook.mjs  gen-assets.mjs  gen-golden-fixtures.ts  gen-template-og.ts  gen-template-pages.ts  register-commands.mjs
scripts/seo/: audit.ts  content.ts  features-layout.ts  features.ts  guides-layout.ts  guides.ts  layout.ts  og-card.ts  render-message.ts  submit-indexnow.mjs
server/: .env.example  .gitignore  Caddyfile  Cargo.toml  Dockerfile  MONITORING.md  README.md  compose.yml  docker-compose.yml
server/gatus/: config.yaml
server/ops/alerts/: README.md  dweeb-alerts.service  dweeb-failure-ping.sh  dweeb-failure-ping@.service  dweeb-log-alerts.py
server/src/: activity.rs  activity_draft.rs  ai.rs  ai_prompt.txt  ai_usage.rs  auth.rs  avatar.rs  cache.rs  config.rs  discord.rs  entitlement.rs  error.rs  feedback.rs  library.rs  main.rs  ratelimit.rs  reconcile.rs  routes.rs  schedule.rs  schedule_rule.rs  schedule_validate.rs  schedule_worker.rs  seal.rs  session.rs  shortlink.rs  singleflight.rs  sqlite_pool.rs  stripe.rs  telemetry.rs
src/: main.tsx  react-inert.d.ts  vite-env.d.ts
src/activity/: ActivityApp.module.css  ActivityApp.tsx  ActivityBar.module.css  ActivityBar.tsx  ActivityGallery.tsx  Avatar.module.css  Avatar.tsx  BuilderSkeleton.module.css  BuilderSkeleton.tsx  ChannelPicker.module.css  ChannelPicker.tsx  GuildPicker.module.css  GuildPicker.tsx  JsonDialog.tsx  LibraryDialog.module.css  LibraryDialog.tsx  PlanBadge.tsx  PostConfirm.module.css  PostConfirm.tsx  PostSuccess.module.css  PostSuccess.tsx  PresenceDock.module.css  PresenceDock.tsx  RestoreDialog.module.css  RestoreDialog.tsx  SaveDraftDialog.module.css  SaveDraftDialog.tsx  SelfPresence.module.css  SelfPresence.tsx  Skeletons.module.css  Skeletons.tsx
src/app/: App.tsx  ErrorBoundary.tsx  TestModeNotice.tsx  UpdatePrompt.module.css  UpdatePrompt.tsx  featureIntent.test.ts  featureIntent.ts  useAttachmentGc.test.ts  useAttachmentGc.ts  useAutoSaveDraft.ts  useCustomBotDeepLink.ts  useDraftOriginBootstrap.ts  useKeyboardShortcuts.ts  usePlansDeepLink.ts  useShareUrlBootstrap.ts  useTemplateDeepLink.ts
src/data/: presets.ts  showcase.ts
src/lib/: cn.ts  discordDeepLink.test.ts  discordDeepLink.ts  fileUpload.ts  id.ts  measureBarFit.ts  onceVisible.ts  snowflake.ts  useBarWidth.ts  useScrollActiveIntoView.ts
src/styles/: global.css  reset.css  tokens.css
src/test/: fixtures.ts
src/ui/: Button.module.css  Button.tsx  ChunkErrorBoundary.tsx  ColorInput.module.css  ColorInput.tsx  Disclosure.module.css  Disclosure.tsx  Field.module.css  Field.test.ts  Field.tsx  Icon.tsx  IconButton.module.css  IconButton.tsx  MarkdownTextArea.module.css  MarkdownTextArea.tsx  MarkdownToolbar.module.css  MarkdownToolbar.tsx  Menu.module.css  Menu.tsx  Modal.module.css  Modal.tsx  PlaceholderAutocomplete.module.css  PlaceholderInput.module.css  PlaceholderInput.tsx  PlaceholderMenu.tsx  Select.module.css  Select.tsx  Switch.module.css  Switch.tsx  TextArea.module.css  TextArea.tsx  TextInput.module.css  TextInput.tsx  TimestampPicker.module.css  TimestampPicker.tsx  Toast.module.css  Toast.tsx  guildNav.tsx  markdownActions.ts  usePlaceholderAutocomplete.tsx
video/: SCRIPT.md  package.json  remotion.config.ts  tsconfig.json
video/scripts/: audio-synth.mjs  generate-audio.mjs  generate-sfx.mjs  rebuild-music.mjs  stills.mjs
video/src/: ActivityPreview.tsx  DweebPromo.tsx  Root.tsx  data.ts  fonts.ts  theme.ts  (+1 more)
(+402 files in other folders)
