[package]
name = "dweeb-proxy"
version = "0.1.0"
edition = "2021"
description = "Read-only Discord REST proxy for the DWEEB embed builder (roles / channels / emojis)."

[dependencies]
# `ws` powers the embedded Activity's real-time collaboration room (a WebSocket
# that fans message drafts + presence between the participants of one instance).
# `multipart` parses the Activity's post/edit bodies when they carry uploaded
# files (`payload_json` + `files[i]` parts, same shape the web builder sends
# straight to Discord).
axum = { version = "0.7", features = ["ws", "multipart"] }
# Loads a local `.env` for `cargo run` / direct binary runs (no-op under Docker,
# which injects env vars itself).
dotenvy = "0.15"
# `sync` brings in the Semaphore used to cap concurrent calls to Discord under
# the shared bot token; `time` backs the rate limiter's periodic eviction.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net", "sync", "time"] }
tower-http = { version = "0.5", features = ["cors", "trace", "timeout"] }
# Encrypted (AEAD) cookies for the OAuth session ŌĆö keeps the user's Discord
# access token off the wire to JS (httpOnly) and unreadable at rest in the cookie.
axum-extra = { version = "0.9", features = ["cookie-private"] }
# CSPRNG for unguessable OAuth `state` (CSRF) and session nonces.
getrandom = "0.2"
# Seals custom-bot client secrets at rest (AES-256-GCM under a key derived
# from SESSION_SECRET) before they're handed to the dispatcher's registry ŌĆö
# a registry/database leak alone never exposes a usable secret.
aes-gcm = "0.10"
hex = "0.4"
# Persistent store for the opt-in share short links (7-day TTL). `bundled`
# compiles SQLite from source, so the image needs no system libsqlite ŌĆö same
# choice as the dispatcher and modal-form plugins.
rusqlite = { version = "0.31", features = ["bundled"] }
# `Duration` for cookie max-age. Pinned to the same 0.3 line the `cookie` crate
# (via axum-extra) uses, so the types unify to one version.
time = { version = "0.3", default-features = false }
# Wall-clock recurrence for scheduled posts. `chrono` does the calendar maths;
# `chrono-tz` carries the IANA tz database so "every weekday at 9am New York"
# stays correct across DST. `clock`/`std` only ŌĆö no `wasmbind`/`oldtime`.
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
chrono-tz = "0.10"
# SHA-256 of a schedule's manage token, so the DB stores only a hash (a leak of
# the file never yields a usable bearer capability).
sha2 = "0.10"
# HMAC-SHA256 for verifying Stripe webhook signatures (see `stripe.rs`). Pairs
# with `sha2` above (same `digest` 0.10 line), so no version conflict.
hmac = "0.12"
# `multipart` forwards the Activity's uploaded files to Discord's webhook
# execute/edit endpoints (payload_json + file parts).
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart"] }
# Optional shared cache + rate-limit backend for multi-instance deployments.
# Minimal feature set: an async (tokio) connection manager with auto-reconnect.
redis = { version = "0.27", default-features = false, features = ["tokio-comp", "connection-manager"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Optimise the release binary for size ŌĆö this is a low-throughput proxy, so a
# small footprint matters more than squeezing out every microsecond. `panic`
# is left at the default (unwind) so a panicking handler tears down only its
# own request task, not the whole process.
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
