[package]
name = "dweeb-giveaway"
version = "0.2.0"
edition = "2021"
description = "DWEEB plugin: run a giveaway from a button — live entrant count, entry requirements (role / account age / one-per-person), a fair random draw of N winners, reroll, cancel, and optional winner DMs."

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net", "time"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
# Loads a local `.env` for `cargo run`; a no-op under Docker (which injects env).
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Talks to the Discord REST API: list a guild's roles for the requirement picker
# (config time) and DM the winners (draw time). rustls avoids an OpenSSL system
# dependency, keeping the deploy image tiny. Both uses are OPTIONAL — the core
# giveaway (enter / draw / announce) runs entirely off interaction responses and
# needs no bot token.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# DM several winners concurrently so a multi-winner draw still answers fast.
futures = "0.3"
# Verify Discord's Ed25519 interaction signatures.
ed25519-dalek = "2"
hex = "0.4"
# Single-file embedded store — no separate DB server to pay for. `bundled`
# compiles SQLite from source, so the image needs no system libsqlite.
rusqlite = { version = "0.31", features = ["bundled"] }
# CSPRNG for opaque instance ids, separate edit credentials, AND the unbiased
# winner draw.
getrandom = "0.2"
# One OS-seeded userspace CSPRNG per draw. Reservoir sampling may request a
# random index per entrant; entering the kernel for every row wastes CPU.
rand = "0.9"
# Store only a one-way digest of each edit credential.
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Small, low-throughput service — optimise the release binary for size so it
# fits the cheapest hosting tiers.
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
