[package]
name = "dweeb-quick-replies"
version = "0.2.0"
edition = "2021"
description = "DWEEB plugin: attach canned replies to a button or topic menu — each click/option sends a private (or public) message with text, links and {user}/{server} variables, with optional role-gating. No bot token needed."

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net", "time"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
# Loads a local `.env` for `cargo run`; a no-op under Docker (which injects env).
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Talks to the Discord REST API for ONE optional thing: listing a guild's roles
# so the config UI's role-gate picker shows real role names instead of raw ids.
# The core (click → reply) calls nothing. rustls avoids an OpenSSL system
# dependency, keeping the deploy image tiny.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# Verify Discord's Ed25519 interaction signatures.
ed25519-dalek = "2"
hex = "0.4"
# Single-file embedded store — no separate DB server to pay for. `bundled`
# compiles SQLite from source, so the image needs no system libsqlite.
rusqlite = { version = "0.31", features = ["bundled"] }
# CSPRNG for opaque instance ids and separate edit credentials.
getrandom = "0.2"
# Store only a one-way digest of each edit credential.
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Small, low-throughput service — optimise the release binary for size so it
# fits the cheapest hosting tiers.
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
